Add permanent company deletion
